--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "dependencies": {
     "grunt": "^0.4.5",
-    "grunt-loopback-angular": "^1.1.0"
+    "grunt-loopback-angular": "^1.1.0",
+    "loopback-datasource-juggler": "~2.10.2",
+    "loopback": "~2.7.0",
+    "loopback-boot": "~2.3.0",
+    "serve-favicon": "~2.1.6",
+    "compression": "~1.2.0",
+    "loopback-connector-postgresql": "~1.1.4",
+    "errorhandler": "~1.2.2",
+    "loopback-explorer": "~1.5.1"
   }
 }
