--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "dependencies": {
     "grunt": "^0.4.5",
-    "grunt-loopback-angular": "^1.1.0"
+    "grunt-loopback-angular": "^1.1.0",
+    "lodash": "^2.4.1",
+    "aws-sqs-poller": "0.0.6"
   }
 }
