--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "loopback-connector-postgresql": "~1.1.4",
     "loopback-datasource-juggler": "~2.10.2",
     "loopback-explorer": "~1.5.1",
-    "serve-favicon": "~2.1.6"
+    "serve-favicon": "~2.1.6",
+    "twitter": "^0.2.13"
   }
 }
